--- a/style.css
+++ b/style.css
@@ -833,3 +833,190 @@ footer{
         grid-gap: 5px;
     }
 }
+
+ 
+  /* header */
+  section{
+    padding: 2rem 7%;
+  }
+  
+  .heading{
+    text-align: center;
+    padding: 1.2rem 0;
+    margin-bottom: 3rem;
+    color: var(--primary-color);
+    text-transform: uppercase;
+    font-size: 4rem;
+  }
+  
+  .heading span{
+    color: var(--secondary);
+    text-transform: uppercase;
+  }
+  :root{
+    --primary-color: #3bb77e;
+    --secondary :#ffba43;
+    --bg: #e2f9ee;
+    --black: #1c2137;
+    --white: #fff;
+    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+  }
+  
+
+  
+ 
+  section{
+    padding: 2rem 7%;
+  }
+  
+  .heading{
+    text-align: center;
+    padding: 1.2rem 0;
+    margin-bottom: 3rem;
+    color: var(--primary-color);
+    text-transform: uppercase;
+    font-size: 4rem;
+  }
+  
+  .heading span{
+    color: var(--secondary);
+    text-transform: uppercase;
+  }
+  
+  .btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1.3rem 3.5rem;
+    font-size: 1.7rem;
+    color: var(--white);
+    border-radius: .5rem;
+    background: var(--primary-color);
+    cursor: pointer;
+  }
+  
+  .btn:hover{
+    color: var(--white);
+    background: var(--secondary);
+    box-shadow: var(--box-shadow);
+  }
+    
+  
+  
+  
+  #menu-btn {
+    display: none;
+  }
+  
+  
+  .header .login-form{
+    position: absolute;
+    top: 115%; right: -105%;
+    background: var(--white);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    width: 35rem;
+    padding: 2rem;
+  }
+  
+  .header .login-form.active{
+    right: 2rem;
+    transition: .4s linear;
+  }
+  
+  .header .login-form h3{
+    color: var(--black);
+    font-size: 2.2rem;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: .7rem;
+  }
+  
+  .header .login-form .box{
+    margin: .7rem 0;
+    border: .1rem solid rgba(0, 0, 0, 0.1);
+    padding: 1rem 1.2rem;
+    font-size: 1.5rem;
+    color: var(--black);
+    text-transform: capitalize;
+    width: 100%;
+  }
+  
+  .header .login-form .remember{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    margin: .7rem 0;
+  }
+  
+  .header .login-form .remember label{
+    font-size: 1.5rem;
+    color: var(--black);
+    cursor: pointer;
+  }
+  
+  .header .login-form .btn{
+    margin: 1rem 0;
+    text-align: center;
+    width: 100%;
+  }
+  
+ 
+  
+  
+   
+  
+  
+  
+  
+  
+  .contact .row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+  }
+  
+  
+ 
+  .contact .row form{
+    flex: 1 1 50rem;
+    padding: 5rem;
+    padding-top: 0.2rem;
+  }
+  
+  .contact .row form .inputBox{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .contact .row form .inputBox input,
+  .contact .row form textarea{
+    padding: 1rem;
+    margin: 1rem 0;
+    font-size: 1.7rem;
+    color: #666;
+    text-transform: capitalize;
+    border: .1rem solid transparent;
+    background: var(--bg);
+    border-bottom-color: var(--primary-color);
+    border-radius: .5rem .5rem 0 0;
+    width: 49%;
+  }
+  
+  .contact .row form .inputBox input:focus,
+  .contact .row form textarea:focus{
+    border-top-color: var(--primary-color);
+    border-right-color: var(--primary-color);
+    border-left-color: var(--primary-color);
+  }
+  
+  .contact .row form textarea{
+    width: 100%;
+    resize: none;
+    height: 15rem;
+  }
+  
+  
+
+  
+  
